# e17

./: FEATURE-LOCKED  Makefile.linux  Makefile.win
E-MODULES-EXTRA/: AUTHORS  Makefile.in  README  README.BROKEN  autogen.sh  configure.ac  e_modules-TEMPLATE.spec.in  e_modules.spec
E-MODULES-EXTRA/alarm/: Makefile.am  README  alarm.edc  configure.ac  configure.in  e-module-alarm.edj  e_mod_config.c  e_mod_main.c  e_modules-alarm.spec.in  module.desktop.in
E-MODULES-EXTRA/bling/: .cvsignore  AUTHORS  COPYING  Makefile.am  compmgr.c  config.h.in  configure.ac  configure.in  e-module-bling.edj  e_mod_config.c  e_mod_main.c  e_mod_main.h  e_modules-bling.spec.in  module.desktop  module.desktop.in
E-MODULES-EXTRA/bodhi-shutdown/: Makefile.am  README  autogen.sh  config.h.in  configure.ac  e-module-bodhi-shutdown.edc  module.desktop.in
E-MODULES-EXTRA/calendar/: .cvsignore  AUTHORS  COPYING-PLAIN  Makefile.am  calendar.edc  configure.ac  configure.in  e-module-calendar.edc  e-module-calendar.edj  e_mod_main.c  e_mod_main.h  e_modules-calendar.spec.in  module.desktop  module.desktop.in
E-MODULES-EXTRA/comp-scale/: .gitignore  AUTHORS  Makefile.am  configure.ac  e-module-scale.edc  e_modules-scale.spec.in  module.desktop.in
E-MODULES-EXTRA/configmenu/: AUTHORS  Makefile.am  README  configure.ac  e-module-config.edc  e_modules-configmenu.spec.in  module.desktop.in
E-MODULES-EXTRA/cpu/: .cvsignore  Makefile.am  configure.ac  configure.in  cpu.edc  e-module-cpu.edc  e-module-cpu.edj  e_mod_main.c  e_mod_main.h  e_modules-cpu.spec.in  module.desktop  module.desktop.in
E-MODULES-EXTRA/debian/: changelog  control  emodule-bling.install  emodule-calendar.install  emodule-diskio.install  emodule-drawer.install  emodule-echo.install  emodule-emu.install  emodule-exalt-client.install  emodule-forecasts.install  emodule-iiirk.install  emodule-language.install  emodule-mail.install  emodule-mem.install  emodule-news.install  emodule-rain.install  emodule-screenshot.install  emodule-systray.install  emodule-tclock.install  emodule-tiling.install  emodule-uptime.install  emodule-winselector.install  rules
E-MODULES-EXTRA/deskshow/: .cvsignore  Makefile.am  configure.ac  configure.in  deskshow.edc  e-module-deskshow.edc  e-module-deskshow.edj  e_mod_main.c  e_modules-deskshow.spec.in  module.desktop  module.desktop.in
E-MODULES-EXTRA/diskio/: AUTHORS  COPYING  COPYING-PLAIN  Makefile.am  configure.ac  configure.in  e-module-diskio.edc  e_modules-diskio.spec.in  module.desktop.in
E-MODULES-EXTRA/drawer/: AUTHORS  COPYING  Makefile.am  README  TODO  configure.ac  drawer.pc.in  e_modules-drawer.spec.in  module.desktop.in
E-MODULES-EXTRA/e-tiling/: .gitignore  COPYING  ChangeLog  Makefile.am  README  TODO  configure.ac
E-MODULES-EXTRA/echo/: AUTHORS  Makefile.am  e_modules-echo.spec.in  module.desktop.in
E-MODULES-EXTRA/eektool/: .gitignore  AUTHORS  COPYING-PLAIN  Makefile.am  README  configure.ac  e-module-eektool.edc  e_modules-eektool.spec.in  module.desktop.in
E-MODULES-EXTRA/eenvader.fractal/: .gitignore  AUTHORS  Makefile.am  README  configure.ac  gen_invaders.py
E-MODULES-EXTRA/efm_nav/: AUTHORS  Makefile.am  configure.ac  configure.in  e-module-efm_nav.edc  e_modules-efm_nav.spec.in  module.desktop.in
E-MODULES-EXTRA/efm_path/: Makefile.am  configure.ac  configure.in  e-module-efm_path.edc  e_modules-efm_path.spec.in  module.desktop.in
E-MODULES-EXTRA/efm_pathbar/: .cvsignore  AUTHORS  INSTALL  Makefile.am  configure.ac  e-module-efm_pathbar.edc  e_modules-efm_pathbar.spec.in  module.desktop.in
E-MODULES-EXTRA/elfe/: .gitignore  AUTHORS  Makefile.am  README  configure.ac  e_modules-elfe.spec.in  launch.sh
E-MODULES-EXTRA/empris/: AUTHORS  Makefile.am  README  configure.ac  e-module-empris.edc  e_modules-empris.spec.in  empris.edc  module.desktop.in
E-MODULES-EXTRA/emu/: .cvsignore  EMU_PROTOCOL.txt  Makefile.am  configure.ac  configure.in  e_modules-emu.spec.in  emu_client  module.desktop.in  module_edje.edc  rebuildit
E-MODULES-EXTRA/engage/: .gitignore  AUTHORS  COPYING-PLAIN  CREDITS  INSTALL  Makefile.am  README  TODO  configure.ac  e_modules-engage.spec.in  module.desktop.in
E-MODULES-EXTRA/eooorg/: AUTHORS  Makefile.am  README  configure.ac  e-module-eooorg.edc  e_modules-eooorg.spec.in  module.desktop.in
E-MODULES-EXTRA/everything-aspell/: AUTHORS  README  (+2 more)
clouseau/: .gitignore  COPYING  Makefile.am  README  TODO  autogen.sh  configure.ac  make.sh
e_dbus/: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  e_dbus.spec.in  ebluez.pc.in  econnman-0.7x.pc.in  econnman.pc.in  edbus.pc.in  ehal.pc.in  enm.pc.in  enotify.pc.in  eofono.pc.in  eukit.pc.in
econnman/: Makefile.am  README  configure.ac  econnman-bin  econnman-bin.in
ecrire/: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  README  TODO  autogen.sh  cmakeconfig.h.in  configure.ac
editje/: .gitignore  AUTHORS  COPYING  COPYING.icons  Makefile.am  README  configure.ac  editje-bin  editje.spec.in
edje_editor/: Makefile.am  TODO  configure.ac  configure.in
edje_viewer/: .gitignore  AUTHORS  Makefile.am  README  TODO  configure.ac
efx/: .gitignore  AUTHORS  TODO  configure.ac
elicit/: .cvsignore  AUTHORS  Makefile.am  README  THEME  TODO  bootstrap  configure.ac
elitaire/: COPYING  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
elmdentica/: .gitignore  .svnignore  AUTHORS  ChangeLog  KNOWN_ISSUES  Makefile.am  README  TODO  autogen.sh  config.h.in  configure.ac  elmdentica.spec.in
emage/: Makefile.am  autogen.sh  configure.ac  emage.desktop
emphasis/: Makefile.am  README  configure.ac  configure.in
empower/: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  empower.spec.in
emprint/: .gitignore  AUTHORS  Makefile.am  configure.ac
enhance/: AUTHORS  Makefile.am  configure.ac
enity/: .cvsignore  AUTHORS  Doxyfile  INSTALL  Makefile.am  README  configure.ac
enjoy/: .gitignore  AUTHORS  Makefile.am  README  TODO  configure.ac  enjoy.spec.in
(+24078 files in other folders)
