EXTRA_DIST = \
	AUTHORS \
	COPYING \
	README \
	autogen.sh

dist_bin_SCRIPTS = econnman-bin

desktopdir = $(datadir)/applications
desktop_DATA = data/desktop/econnman.desktop

EXTRA_DIST += $(desktop_DATA)

MAINTAINERCLEANFILES = \
	aclocal.m4 \
	configure \
	depcomp \
	INSTALL \
	install-sh \
	Makefile.in \
	missing
