AC_INIT([econnman], [1], [enlightenment-devel@lists.sourceforge.net])
AC_PREREQ([2.65])
AC_CONFIG_SRCDIR([configure.ac])

AM_INIT_AUTOMAKE([])

AM_PATH_PYTHON([2.7])

AC_CONFIG_FILES([
Makefile
])

AC_OUTPUT

echo
echo
echo
echo "------------------------------------------------------------------------"
echo "$PACKAGE $VERSION"
echo "------------------------------------------------------------------------"
echo
echo "Configuration Options Summary:"
echo
echo "  Python...............: $PYTHON ($PYTHON_VERSION)"
echo
echo "Installation...........: make install (as root if needed, with 'su' or 'sudo')"
echo "  prefix...............: $prefix"
echo "  pythondir............: $pythondir"
echo "  pyexecdir............: $pyexecdir"
echo
echo
