
MAINTAINERCLEANFILES = \
ABOUT-NLS* \
INSTALL \
Makefile.in \
aclocal.m4 \
autom4te.cache/ \
config.guess \
config.h.in \
config.rpath \
config.sub \
configure \
install-sh \
depcomp \
install-sh \
ltmain.sh \
missing \
m4/*.m4 \
po/Makefile.in.in \
po/Makevars.template \
po/Rules-quot \
po/boldquot.sed \
po/en@* \
po/insert-header.sin \
po/quot.sed \
po/remove-potcdate.sin

EXTRA_DIST = README AUTHORS COPYING

SUBDIRS = src

if HAVE_PO

SUBDIRS += po

endif


ACLOCAL_AMFLAGS = -I m4
